@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.turtle" name="Turtle" version="1.3.5"
+<addon id="script.module.turtle" name="Turtle" version="1.3.6"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
@@ -7,6 +7,7 @@
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.urlresolver" version="0.0.1" />
 		<import addon="script.common.plugin.cache" version="0.9.1"/>
+		<import addon="script.module.simple.downloader" version="1.9.4"/>
 	</requires>
 	<extension point="xbmc.python.module" library="lib" />
 	<extension point="xbmc.addon.metadata">
